--- a/man3/SBO::Lib.3
+++ b/man3/SBO::Lib.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib 3"
-.TH SBO::Lib 3 "Sweetmorn, The Aftermath 9, 3191 YOLD" "" "sbotools 4.0.1"
+.TH SBO::Lib 3 "Pungenday, The Aftermath 11, 3191 YOLD" "" "sbotools 4.0.1"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -105,7 +105,7 @@ repository, as well as GPG verification and key addition.
 .SS SBO::Lib::Solibs
 .IX Subsection "SBO::Lib::Solibs"
 \&\f(CW\*(C`Solibs.pm\*(C'\fR contains variables and subroutines related to checking packages for missing
-shared object dependencies, as well as for \f(CW\*(C`python\*(C'\fR and \f(CW\*(C`ruby\*(C'\fR incompatibility.
+shared object dependencies, as well as for \f(CW\*(C`perl\*(C'\fR, \f(CW\*(C`python\*(C'\fR and \f(CW\*(C`ruby\*(C'\fR incompatibility.
 .SS SBO::Lib::Tree
 .IX Subsection "SBO::Lib::Tree"
 \&\f(CW\*(C`Tree.pm\*(C'\fR determines the location of scripts in the repository and local overrides directory.
