--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -1,4 +1,4 @@
-.TH sboupgrade 1 "Setting Orange, The Aftermath 8, 3191 YOLD" "sbotools 4.0.1" sbotools
+.TH sboupgrade 1 "Prickle-Prickle, The Aftermath 12, 3191 YOLD" "sbotools 4.0.2" sbotools
 .SH NAME
 .P
 .B
