--- a/man3/SBO::Lib::Download.3
+++ b/man3/SBO::Lib::Download.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Download 3"
-.TH SBO::Lib::Download 3 "Setting Orange, The Aftermath 8, 3191 YOLD" "" "sbotools 4.0.1"
+.TH SBO::Lib::Download 3 "Prickle-Prickle, The Aftermath 12, 3191 YOLD" "" "sbotools 4.0.2"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
