--- a/man5/sbotools.colors.5
+++ b/man5/sbotools.colors.5
@@ -1,4 +1,4 @@
-.TH sbotools.colors 5 "Setting Orange, The Aftermath 8, 3191 YOLD" "sbotools 4.0.1" sbotools
+.TH sbotools.colors 5 "Prickle-Prickle, The Aftermath 12, 3191 YOLD" "sbotools 4.0.2" sbotools
 .SH NAME
 .P
 .B
