--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -279,10 +279,14 @@ OBSOLETE_CHECK=(FALSE|TRUE)
 If
 .B
 TRUE\fR\
-\&, download an updated copy of the obsolete script list to
+\&, download updated copies of the obsolete script list and the perl
+version history file to
 .I
 /etc/sbotools/obsolete
-from the
+and
+.I
+/etc/sbotools/perl_vers\fR\
+\&, respectively, from the
 .B
 sbotools
 home page at
