--- a/man3/SBO::Lib::Repo.3
+++ b/man3/SBO::Lib::Repo.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Repo 3"
-.TH SBO::Lib::Repo 3 "Sweetmorn, The Aftermath 9, 3191 YOLD" "" "sbotools 4.0.1"
+.TH SBO::Lib::Repo 3 "Prickle-Prickle, The Aftermath 12, 3191 YOLD" "" "sbotools 4.0.1"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -84,12 +84,8 @@ downloaded sources are kept.
 .el .SS \f(CW$gpg_log\fP
 .IX Subsection "$gpg_log"
 \&\f(CW$gpg_log\fR defaults to \f(CW\*(C`/usr/sbo/gpg.log\*(C'\fR, and it is where the output
-of the most recent \f(CW\*(C`gnupg\*(C'\fR verification is kept.
-.ie n .SS $gpg_obsolete_log
-.el .SS \f(CW$gpg_obsolete_log\fP
-.IX Subsection "$gpg_obsolete_log"
-\&\f(CW$gpg_obsolete_log\fR defaults to \f(CW\*(C`/usr/sbo/gpg\-obsolete.log\*(C'\fR, and it is where the output
-of the most recent \f(CW\*(C`gnupg\*(C'\fR verification for the obsolete script list is kept.
+of the most recent \f(CW\*(C`gnupg\*(C'\fR verification for the repository is kept. Other
+\&\f(CW\*(C`gnupg\*(C'\fR logs are saved under \f(CW\*(C`/usr/sbo/file_name_here.asc.log\*(C'\fR.
 .ie n .SS $repo_path
 .el .SS \f(CW$repo_path\fP
 .IX Subsection "$repo_path"
@@ -157,8 +153,11 @@ it returns a true value.
 .PP
 \&\f(CWget_obsolete()\fR downloads a file from the \f(CW\*(C`sbotools\*(C'\fR home page listing scripts that are
 known to have been added to Slackware \-current under different names, or to be obsolete
-out\-of\-tree build dependencies. It is saved to \f(CW\*(C`/etc/sbotools/obsolete\*(C'\fR. \f(CW\*(C`gnupg\*(C'\fR verification
-is performed if \f(CW\*(C`GPG_VERIFY\*(C'\fR is \f(CW\*(C`TRUE\*(C'\fR. There is no useful return value.
+out\-of\-tree build dependencies. It is saved to \f(CW\*(C`/etc/sbotools/obsolete\*(C'\fR. The \f(CW\*(C`perl\*(C'\fR build
+history file, \f(CW\*(C`/etc/sbotools/perl_vers\*(C'\fR, is downloaded as well.
+.PP
+\&\f(CW\*(C`gnupg\*(C'\fR verification is performed if \f(CW\*(C`GPG_VERIFY\*(C'\fR is \f(CW\*(C`TRUE\*(C'\fR. There is no useful return
+value.
 .SS git_sbo_tree
 .IX Subsection "git_sbo_tree"
 .Vb 1
@@ -254,14 +253,14 @@ script installation and upgrade until the issue has been resolved, \f(CW\*(C`GPG
 \&\f(CW\*(C`verify_gpg\*(C'\fR determines whether a git repo is in use, and then
 runs \f(CWgpg(1)\fR verification. It is exportable, and is currently used in
 \&\f(CWsboinstall(1)\fR, \f(CWsboupgrade(1)\fR and \f(CWsbocheck(1)\fR.
-.SS verify_obsolete
-.IX Subsection "verify_obsolete"
+.SS verify_file
+.IX Subsection "verify_file"
 .Vb 1
-\&  verify_obsolete();
+\&  verify_file($asc);
 .Ve
 .PP
-\&\f(CWverify_obsolete()\fR runs \f(CW\*(C`gnupg\*(C'\fR verification on a newly\-downloaded
-\&\f(CW\*(C`/etc/sbotools/obsolete\*(C'\fR file. There is no useful return value.
+\&\f(CWverify_file()\fR runs \f(CW\*(C`gnupg\*(C'\fR verification, taking an \f(CW\*(C`asc\*(C'\fR file as the only
+argument. There is no useful return value.
 .SS retrieve_key
 .IX Subsection "retrieve_key"
 .Vb 1
