--- a/man3/SBO::Lib::Util.3
+++ b/man3/SBO::Lib::Util.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Util 3"
-.TH SBO::Lib::Util 3 "Pungenday, The Aftermath 11, 3191 YOLD" "" "sbotools 4.0.1"
+.TH SBO::Lib::Util 3 "Prickle-Prickle, The Aftermath 12, 3191 YOLD" "" "sbotools 4.0.1"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -164,6 +164,12 @@ This file contains a list of scripts that have been renamed and added to Slackwa
 .IX Subsection "@obsolete"
 This array is based on the contents of \f(CW$obs_file\fR. Only \f(CWobsolete_array()\fR should
 interact with \f(CW@obsolete\fR directly; in other situations, make a copy.
+.ie n .SS $perl_file
+.el .SS \f(CW$perl_file\fP
+.IX Subsection "$perl_file"
+This file contains build timestamps for the introduction of major perl versions
+into Slackware. It is used by \f(CW\*(C`Solibs.pm\*(C'\fR during the \f(CW\*(C`perl\*(C'\fR package test. It is
+located at \f(CW\*(C`/etc/sbotools/perl_vers\*(C'\fR by default.
 .ie n .SS "(@py_installed, @py_missing)"
 .el .SS "(@py_installed, \f(CW@py_missing\fP)"
 .IX Subsection "(@py_installed, @py_missing)"
