--- a/man1/sbohints.1
+++ b/man1/sbohints.1
@@ -1,4 +1,4 @@
-.TH sbohints 1 "Setting Orange, The Aftermath 8, 3191 YOLD" "sbotools 4.0.1" sbotools
+.TH sbohints 1 "Prickle-Prickle, The Aftermath 12, 3191 YOLD" "sbotools 4.1" sbotools
 .SH NAME
 .P
 .B
