--- a/man3/SBO::Lib.3
+++ b/man3/SBO::Lib.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib 3"
-.TH SBO::Lib 3 "Pungenday, The Aftermath 11, 3191 YOLD" "" "sbotools 4.0.1"
+.TH SBO::Lib 3 "Prickle-Prickle, The Aftermath 12, 3191 YOLD" "" "sbotools 4.1"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
