--- a/THANKS
+++ b/THANKS
@@ -62,7 +62,8 @@ hackedhead (requested installation templates and sboupgrade --all)
 iluvatar1 (reported an .info parse bug)
 januscan (requested strict version-up)
 jonasdemoor (requested download beavior documentation)
-leoctrl (reported sbofind case insensitivity and EOL build options bug)
+leoctrl (reported sbofind case insensitivity, and the EOL build options
+         and sboupgrade nowrap bugs)
 lockywolf (originally reported the URI escape filename bug)
 montagdude (reported sboinstall and sbosnap bugs)
 na3i09 (reported a compat32 sboremove bug)
