sboremove: Fix dependency ordering.

--- a/man1/sboremove.1
+++ b/man1/sboremove.1
@@ -51,8 +51,9 @@ with the
 --compat32
 flag.
 .P
-In all cases, this script prompts the user package-by-package
-before performing any removal operations. No option exists to enable
+In all cases, this script prompts the user package-by-package in
+reverse build order before performing any removal operations. No
+option exists to enable
 .B
 sboremove
 to uninstall packages without confirmation prompts,
