--- a/man3/SBO::Lib::Util.3
+++ b/man3/SBO::Lib::Util.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Util 3"
-.TH SBO::Lib::Util 3 "Prickle-Prickle, The Aftermath 12, 3191 YOLD" "" "sbotools 4.1"
+.TH SBO::Lib::Util 3 "Sweetmorn, The Aftermath 14, 3191 YOLD" "" "sbotools 4.1"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -170,23 +170,6 @@ interact with \f(CW@obsolete\fR directly; in other situations, make a copy.
 This file contains build timestamps for the introduction of major perl versions
 into Slackware. It is used by \f(CW\*(C`Solibs.pm\*(C'\fR during the \f(CW\*(C`perl\*(C'\fR package test. It is
 located at \f(CW\*(C`/etc/sbotools/perl_vers\*(C'\fR by default.
-.ie n .SS "(@py_installed, @py_missing)"
-.el .SS "(@py_installed, \f(CW@py_missing\fP)"
-.IX Subsection "(@py_installed, @py_missing)"
-These exported arrays contain \f(CW\*(C`python\*(C'\fR versions that are installed and needed but
-missing, respectively.
-.ie n .SS "($py3ver, $py2ver)"
-.el .SS "($py3ver, \f(CW$py2ver\fP)"
-.IX Subsection "($py3ver, $py2ver)"
-These exported variables contain the major system \f(CW\*(C`python2\*(C'\fR and \f(CW\*(C`python3\*(C'\fR versions
-in the form e.g. \f(CW\*(C`python3.12\*(C'\fR. If \f(CW\*(C`python3\*(C'\fR is not installed, \f(CW$py3ver\fR is equal to
-\&\f(CW$py2ver\fR.
-.ie n .SS $rubyver
-.el .SS \f(CW$rubyver\fP
-.IX Subsection "$rubyver"
-This exported variable contains the major system \f(CW\*(C`ruby\*(C'\fR version. The correct value of
-the major version is calculated in \f(CWget_installed_packages()\fR from \f(CWSBO::Lib::Pkgs(3)\fR,
-e.g. \f(CW\*(C`ruby\-3.4.0\*(C'\fR for \f(CW\*(C`ruby\-3.4.6\*(C'\fR.
 .ie n .SS $userland_32
 .el .SS \f(CW$userland_32\fP
 .IX Subsection "$userland_32"
