--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -87,6 +87,39 @@ and
 flags.
 .SH OPTIONS
 .P
+All values default to
+.B
+FALSE
+except for
+.B
+SBO_HOME\fR\
+\&. Recommended non-default settings include
+.B
+TRUE
+for:
+.RS
+.IP \[bu] 3n
+.B
+COLOR
+.IP \[bu] 3n
+.B
+CPAN_IGNORE
+.IP \[bu] 3n
+.B
+ETC_PROFILE
+.IP \[bu] 3n
+.B
+GPG_VERIFY\fR\
+\&, unless the upstream repository is not regularly
+signed with
+.B
+gpg(1)\fR\
+\&.
+.IP \[bu] 3n
+.B
+SO_CHECK
+.RE
+.P
 .B
 -l|--list
 .RS
