man*: Fix new bulleted lists.

--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -63,26 +63,31 @@ SBO_HOME\fR\
 TRUE
 for:
 .RS
-.IP \[bu] 3n
+
+\[bu]
 .B
 COLOR
-.IP \[bu] 3n
+
+\[bu]
 .B
 CPAN_IGNORE
-.IP \[bu] 3n
+
+\[bu]
 .B
 ETC_PROFILE
-.IP \[bu] 3n
+
+\[bu]
 .B
 GPG_VERIFY\fR\
-\&, unless the upstream repository is not regularly
-signed with
+\&, provided the upstream repository is regularly signed with
 .B
 gpg(1)\fR\
 \&.
-.IP \[bu] 3n
+
+\[bu]
 .B
 SO_CHECK
+
 .RE
 .P
 The current configuration keys are as follows:
