--- a/man3/SBO::Lib::Solibs.3
+++ b/man3/SBO::Lib::Solibs.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Solibs 3"
-.TH SBO::Lib::Solibs 3 "Sweetmorn, The Aftermath 14, 3191 YOLD" "" "sbotools 4.1"
+.TH SBO::Lib::Solibs 3 "Prickle-Prickle, The Aftermath 32, 3191 YOLD" "" "sbotools 4.1.1"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
