--- a/man1/sboremove.1
+++ b/man1/sboremove.1
@@ -1,4 +1,4 @@
-.TH sboremove 1 "Prickle-Prickle, The Aftermath 32, 3191 YOLD" "sbotools 4.1.1" sbotools
+.TH sboremove 1 "Setting Orange, The Aftermath 33, 3191 YOLD" "sbotools 4.1.2" sbotools
 .SH NAME
 .P
 .B
