--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -1,4 +1,4 @@
-.TH sbotools.conf 5 "Prickle-Prickle, The Aftermath 32, 3191 YOLD" "sbotools 4.1.1" sbotools
+.TH sbotools.conf 5 "Setting Orange, The Aftermath 33, 3191 YOLD" "sbotools 4.1.2" sbotools
 .SH NAME
 .P
 .B
