--- a/man3/SBO::Lib::Build.3
+++ b/man3/SBO::Lib::Build.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Build 3"
-.TH SBO::Lib::Build 3 "Setting Orange, The Aftermath 33, 3191 YOLD" "" "sbotools 4.1.2"
+.TH SBO::Lib::Build 3 "Setting Orange, The Aftermath 38, 3191 YOLD" "" "sbotools 4.1.2"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -206,8 +206,8 @@ false value otherwise. The subroutine returns a queue for a reverse dependency r
 \&  my $name = get_pkg_name($str);
 .Ve
 .PP
-\&\f(CWget_pkg_name()\fR searches \f(CW$str\fR for text matching the package name output
-from \f(CW\*(C`makepkg\*(C'\fR. The package name is returned.
+\&\f(CWget_pkg_name()\fR searches \f(CW$str\fR for the last text matching the package
+name output from \f(CW\*(C`makepkg\*(C'\fR. The package name is returned.
 .SS get_src_dir
 .IX Subsection "get_src_dir"
 .Vb 1
