--- a/THANKS
+++ b/THANKS
@@ -57,6 +57,7 @@ dcjud (requested an installable sbotools.conf)
 drbeco (requested a blacklist and strict version-up)
 fourtysixandtwo (feedback about the overzealous 'missing' script prompt;
                  suggested the sbocheck python test)
+fsLeg (fixed bash completion for sbocheck)
 Geremias (originally reported the info parse bug before version 3.3)
 hackedhead (requested installation templates and sboupgrade --all)
 iluvatar1 (reported an .info parse bug)
