Readme.pm: Parse SlackBuilds for uid/gid first.

--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -54,13 +54,16 @@ their reverse dependencies rebuilt as well. The script exits
 with an error message if circular dependencies are detected.
 .P
 .I
+SlackBuild
+and
+.I
 README
 files are parsed for
 .B
-groupadd
+groupadd(1)
 and
 .B
-useradd
+useradd(1)
 commands, and
 .B
 sboinstall
@@ -996,7 +999,7 @@ None known. If found, Issues and Pull Requests to
 are always welcome.
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboremove(1), sbotool(1), sboupgrade(1), sbotools.colors(5), sbotools.conf(5), sbotools.hints(5), gpg(1), setarch(1)
+sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboremove(1), sbotool(1), sboupgrade(1), sbotools.colors(5), sbotools.conf(5), sbotools.hints(5), gpg(1), groupadd(1), setarch(1), useradd(1)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
