--- a/man3/SBO::Lib::Readme.3
+++ b/man3/SBO::Lib::Readme.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Readme 3"
-.TH SBO::Lib::Readme 3 "Sweetmorn, The Aftermath 54, 3191 YOLD" "" "sbotools 4.1.2"
+.TH SBO::Lib::Readme 3 "Pungenday, The Aftermath 56, 3191 YOLD" "" "sbotools 4.1.2"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -112,13 +112,17 @@ its contents. On error, it returns \f(CW\*(C`undef\*(C'\fR.
 .SS get_user_group
 .IX Subsection "get_user_group"
 .Vb 1
-\&  my @cmds = @{ get_user_group($sbo, $location) };
+\&  my @cmds = @{ get_user_group($sbo, $location, $opts) };
 .Ve
 .PP
 \&\f(CWget_user_group()\fR searches the \f(CW\*(C`SlackBuild\*(C'\fR for \f(CW$sbo\fR in \f(CW$location\fR
 for \f(CWuseradd(1)\fR and \f(CWgroupadd(1)\fR commands, and returns them in an array
 reference. If no commands are found initially, it searches any \f(CW\*(C`README*\*(C'\fR
 files for them.
+.PP
+Some SlackBuilds allow the user to set user and group names and ID numbers
+with variables. Optionally pass an option string \f(CW$opt\fR if interactive or
+if an existing build options file is to be used.
 .SS user_group_exist
 .IX Subsection "user_group_exist"
 .Vb 1
