--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -3,10 +3,10 @@
 .P
 .B
 sbocheck
-- update a local
+- perform
 .B
 SlackBuilds.org
-tree and check for updates
+tree updates and package checks
 .SH SYNOPSIS
 .P
 sbocheck [-h|-v]
@@ -142,6 +142,9 @@ list. The supported values are currently
 .B
 solibs
 (default for no specification),
+.B
+perl\fR\
+\&,
 .B
 python\fR\
 \&,
