--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -21,19 +21,12 @@ sbofind [--raw] ...
 .B
 sbofind
 searches the names of all available SlackBuilds for one or more
-search terms. It reports back any SlackBuilds found along
+search terms. It reports any SlackBuilds found along
 with path, version, installation status information and a short
 description. Use the
 .B
 --descriptions
-option to search descriptions as well. This is akin to running
-.RS
-
-cd /usr/ports; make search name=$search_term display=name,path
-
-
-.RE
-on a FreeBSD system. If the repository includes a
+option to search descriptions as well. If the repository includes a
 .I
 TAGS.txt
 file, these tags are searched to generate additional results.
