--- a/man1/sbotool.1
+++ b/man1/sbotool.1
@@ -1,4 +1,4 @@
-.TH sbotools 1 "Setting Orange, The Aftermath 33, 3191 YOLD" "sbotools 4.1.2" sbotool
+.TH sbotool 1 "Setting Orange, The Aftermath 33, 3191 YOLD" "sbotools 4.1.2" sbotool
 .SH NAME
 .P
 .B
