--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -8,7 +8,7 @@ sboupgrade
 .P
 sboupgrade [-h|-v]
 .P
-sboupgrade [-SXcbde TRUE|FALSE] [-j #|FALSE] [-Lk /path|FALSE] \\
+sboupgrade [-SXbcde TRUE|FALSE] [-j #|FALSE] [-Lk /path|FALSE] \\
            [-fiopqrz] [--batch|--dry-run] --all|sbo_name (sbo_name)
 .P
 sboupgrade [--color|--nocolor] [--wrap|--nowrap] ...
