--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -125,6 +125,10 @@ If
 .B
 TRUE\fR\
 \&, install scripts even if they are already installed from the CPAN.
+.P
+Recommended value:
+.B
+TRUE
 .RE
 .P
 .B
@@ -190,6 +194,11 @@ sboupgrade(1)\fR\
 .UR keyserver.ubuntu.com
 .UE
 on port 80 is offered if available.
+.P
+Recommended value:
+.B
+TRUE
+if the upstream repository is usually signed.
 .RE
 .P
 .B
@@ -242,6 +251,10 @@ file directly. See
 .B
 sbotools.colors(5)
 for more details.
+.P
+Recommended value:
+.B
+TRUE
 .RE
 .P
 .B
@@ -289,6 +302,10 @@ named
 .I
 *.sh
 before running each SlackBuild in the build queue.
+.P
+Recommended value:
+.B
+TRUE
 .RE
 .P
 .B
@@ -446,6 +463,10 @@ ruby
 .I
 _SBo
 packages.
+.P
+Recommended value:
+.B
+TRUE
 .RE
 .P
 .B
