--- a/man3/SBO::Lib::Readme.3
+++ b/man3/SBO::Lib::Readme.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Readme 3"
-.TH SBO::Lib::Readme 3 "Pungenday, The Aftermath 56, 3191 YOLD" "" "sbotools 4.1.2"
+.TH SBO::Lib::Readme 3 "Setting Orange, The Aftermath 68, 3191 YOLD" "" "sbotools 4.1.3"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
