--- a/man3/SBO::Lib::Solibs.3
+++ b/man3/SBO::Lib::Solibs.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Solibs 3"
-.TH SBO::Lib::Solibs 3 "Setting Orange, The Aftermath 68, 3191 YOLD" "" "sbotools 4.1.3"
+.TH SBO::Lib::Solibs 3 "Sweetmorn, Chaos 1, 3192 YOLD" "" "sbotools 4.1.3"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -242,4 +242,4 @@ The sbotools are licensed under the MIT License.
 .PP
 Copyright (C) 2012\-2017, Jacob Pipkin, Luke Williams, Andreas Guldstrand.
 .PP
-Copyright (C) 2024\-2025, K. Eugene Carlson.
+Copyright (C) 2024\-2026, K. Eugene Carlson.
