--- a/man3/SBO::Lib::Download.3
+++ b/man3/SBO::Lib::Download.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Download 3"
-.TH SBO::Lib::Download 3 "Sweetmorn, Chaos 1, 3192 YOLD" "" "sbotools 4.1.3"
+.TH SBO::Lib::Download 3 "Sweetmorn, Chaos 31, 3192 YOLD" "" "sbotools 4.1.3"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -85,7 +85,8 @@ files have their checksums verified. Missing and unverifiable files are download
 md5sum\-designated directories and verified. Finally, \f(CWcreate_symlinks()\fR is run on each
 download.
 .PP
-In case of success, an array of symlinks from \f(CWcreate_symlinks()\fR is returned. In case of
+In case of success, an array of symlinks from \f(CWcreate_symlinks()\fR is returned. The
+subroutine returns empty if the SlackBuild did not contain any downloads. In case of
 failure, an error message and an exit code are returned.
 .SS compute_md5sum
 .IX Subsection "compute_md5sum"
