--- a/man3/SBO::Lib::Util.3
+++ b/man3/SBO::Lib::Util.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Util 3"
-.TH SBO::Lib::Util 3 "Sweetmorn, Chaos 1, 3192 YOLD" "" "sbotools 4.1.3"
+.TH SBO::Lib::Util 3 "Prickle-Prickle, Chaos 34, 3192 YOLD" "" "sbotools 4.1.3"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -75,6 +75,10 @@ SBO::Lib::Util \- Utility functions for SBO::Lib and the sbotools
 .Ve
 .SH VARIABLES
 .IX Header "VARIABLES"
+.ie n .SS $anticipated_next
+.el .SS \f(CW$anticipated_next\fP
+.IX Subsection "$anticipated_next"
+The anticipated Slackware version number to be supported by SBO, currently 15.1.
 .ie n .SS $arch
 .el .SS \f(CW$arch\fP
 .IX Subsection "$arch"
